--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header {
     background-color: #222f3e;
     height: 25px;
     padding: 25px 0 25px 0;
+    width: 100%;
 }
 
 header h2 {
@@ -64,6 +65,7 @@ section .profile{
 
 .links ul li{
     margin: 60px 0 0 25px;
+    list-style: none;;
 }
 
 .btn {
@@ -78,4 +80,20 @@ section .profile{
     border: 1px solid #d35400;
     color: #d35400;
 
+}
+
+
+@media only screen and (max-width: 600px) {
+    .links {
+       
+        
+    }
+    
+    .links ul{
+        display: block;
+    }
+    
+    .links ul li{
+        margin-top: 30px;
+    }
 }
