--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,13 @@ section .profile{
 
 
 @media only screen and (max-width: 600px) {
-    .links {
-       
-        
+
+    body{
+        background-size: inherit;
+    }
+
+    section .profile{
+        margin-top: 120px;
     }
     
     .links ul{
