novo ajuste background

--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,9 @@
 }
 
 body {
-    background-image: url(../images/abstract-art-black-background-blur-1040499.jpg);
+    background: url(../images/abstract-art-black-background-blur-1040499.jpg) no-repeat center center fixed;
     width: 100%;
-    background-size: cover;
     height: 54rem;
-    background-position: center center;
 }
 
 header {
