--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ section .profile{
     section .profile{
         margin-top: 120px;
     }
+
+    figure h2{
+        font-size: 2.2rem;
+    }
     
     .links ul{
         display: block;
