--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,30 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
-body {
-    background: url(../images/abstract-art-black-background-blur-1040499.jpg) no-repeat center center fixed;
+html, body {
     width: 100%;
-    background-size: cover;
-    height: 54rem;
-    font-family: 'Ubuntu', sans-serif;
+    height: 100%;
 }
 
 header {
-    background-color: #222f3e;
-    height: 25px;
-    padding: 25px 0 25px 0;
+    background-image: url(../images/abstract-art-black-background-blur-1040499.jpg);
     width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+header .profile{
+    margin: 200px 0 0 0;
+    border-radius: 50%;
+    border: 5px solid #f1c40f;
+    box-shadow: 0 0 10px #000000;
 }
 
 header h2 {
     color: #f1c40f;
     margin-left: 25px;
+    text-align: center;
 }
 
 figure {
@@ -47,61 +51,17 @@ figcaption {
     text-align: center;
 }
 
-section .profile{
-    margin: 195px 0 0 0;
-    border-radius: 50%;
-    border: 5px solid #f1c40f;
-    box-shadow: 0 0 10px #000000;
-}
-
-.links {
-    display: flex;
-    justify-content: center;
-}
-
-.links ul{
-    display: flex;
-}
-
-.links ul li{
-    margin: 60px 0 0 25px;
-    list-style: none;;
-}
-
-.btn {
-    border: 1px solid #f1c40f;
-    border-radius: 20px;
-    padding: 0.5rem 3rem;
-    color: #f1c40f;
+figcaption {
     text-decoration: none;
 }
 
-.btn:hover {
-    border: 1px solid #d35400;
-    color: #d35400;
-
+.space {
+    margin-top: 15px;
 }
 
+@media only screen and (max-width: 768px) {
 
-@media only screen and (max-width: 600px) {
-
-    body{
-        background-size: inherit;
-    }
-
-    section .profile{
-        margin-top: 120px;
-    }
-
-    figure h2{
-        font-size: 2.2rem;
-    }
-    
-    .links ul{
-        display: block;
-    }
-    
-    .links ul li{
-        margin-top: 30px;
+    header .profile {
+        margin-top: 50px;
     }
 }
