--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ html, body {
     height: 100%;
 }
 
+*{
+    box-sizing: border-box;
+  }
+
 header {
     background-image: url(../images/abstract-art-black-background-blur-1040499.jpg);
     width: 100%;
@@ -15,7 +19,7 @@ header {
 }
 
 header .profile{
-    margin: 200px 0 0 0;
+    margin: 280px 0 0 0;
     border-radius: 50%;
     border: 5px solid #f1c40f;
     box-shadow: 0 0 10px #000000;
