--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 html, body {
     width: 100%;
     height: 100%;
+    font-family: 'Ubuntu', sans-serif!important;
 }
 
 *{
@@ -15,7 +16,7 @@ header {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    font-family: 'Ubuntu', sans-serif;
+    
 }
 
 header .profile{
@@ -63,9 +64,11 @@ figcaption a:hover{
     margin-top: 15px;
 }
 
+
 @media (max-width: 768px) {
 
     header .profile {
         margin-top: 20px;
+        width: 40%;
     }
 }
