--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,137 @@
-
-html, body {
-    width: 100%;
-    height: 100%;
-    font-family: 'Ubuntu', sans-serif!important;
-}
-
 *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
   }
 
-header {
-    background-image: url(../images/abstract-art-black-background-blur-1040499.jpg);
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center center;
+html, body {
+    background: rgb(9,9,121);
+    background: linear-gradient(0deg, rgba(0, 54, 172, 1) 35%, rgba(76, 155, 231, 1) 100%);
     background-repeat: no-repeat;
-    
 }
 
-header .profile{
-    margin: 120px 0 0 0;
+figure{
+    width: 230px;
+    height: 230px;
+    border: 10px solid rgba(255, 255, 255, 0.3);
     border-radius: 50%;
-    border: 5px solid #f1c40f;
-    box-shadow: 0 0 10px #000000;
+    margin: 20px auto;
 }
 
-header h2 {
-    color: #f1c40f;
-    margin-left: 25px;
-    text-align: center;
+figure img{
+    border-radius: 50%;
+    margin-top: 5px;
+    width: 95%;
+    height: auto;
 }
 
-figure {
-    text-align: center;
+.name{
+    color: #ffffff;
 }
 
-figure a {
-   text-decoration: none;
+/* ============ social css =============== */
+.social {
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+    height: 50px;
+    justify-content: space-evenly;
+    display: flex;
+    align-items: center;
+    margin: 20px 0 20px 0;;
 }
 
-figure h2:hover  {
-    color: #f1c40f;
- }
+.social a{
+    text-decoration: none;
+    color: #ffffff;
+    cursor: pointer;
+    transition: transform 500ms ease;
+}
 
-figure h2{
-    color: #ecf0f1;
-    font-size: 2.5rem;
+.social a:hover{
+    transform: scale(1.2);
+}
+
+/* ============ skills css =============== */
+
+.skills h4{
+    border-radius: 8px;
+    border: 0.8px solid rgba(255, 255, 255, 0.2);
+    font-size: 1rem;
+    display: flex;
+    color: #ffffff;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.skills h4 span{
     display: inline-block;
 }
-
-figcaption {
-    color: #ecf0f1;
-    font-size: 28px;
-    text-align: center;
+.line{
+    height: 25px;
+    line-height: 25px;
+    font-size: 14px;
+    color: #fff;
+    position: relative;
+    top: -14px;
 }
 
-figcaption a:hover{
-    text-decoration: none;
+.introduce {
+    margin-bottom: 22px;
 }
 
-.space {
-    margin-top: 15px;
+.introduce p{
+    color: rgba(3, 218, 198, 1);
+    line-height: 4px;
 }
 
-@media (max-width: 768px) {
+/* 
+.line::before{
+    content: '';
+    width: 100%;
+    position: absolute;
+    height: 25px;
+    z-index: 0;
+    border:1px solid #000;
+} */
+.line::after{
+    content: '';
+    width: 100%;
+    border-radius: 20px;
+    outline: none;
+    display: block;
+    height: 5px;
+    z-index: 999;
+    /* background: #03DAC6; */
+    background: linear-gradient(to left, rgba(76, 155, 231, 1) 30%, rgba(3, 218, 198, 1) 100%);
+    transition: 0.8s;
+    animation: animate 1 4s;
+}
 
-    header .profile {
-        margin-top: 20px;
-        width: 40%;
+.line-1::after{
+    max-width: 80%;
+}
+.line-2::after{
+    max-width: 80%;
+}
+.line-3::after{
+    max-width: 50%;
+}
+.line-4::after{
+    max-width: 80%;
+}
+.line-5::after{
+    max-width: 80%;
+}
+.line-6::after{
+    max-width: 70%;
+}
+.line-7::after{
+    max-width: 60%;
+}
+@keyframes animate {
+    0%{
+        width: 0;
+    }100%{
+        width: 100%;
     }
 }
